# DNA_encoding

./: .gitignore  CMakeLists.txt  README.md  configure  configure.cfg  list_results  main.cpp  payload_38char+2ecc.txt  payload_38char.txt  payload_40char.txt  payload_FEC.txt  payload_FEC_wo_cluster.txt  payload_base3.txt  shell.sh  test
encoding_files/: file.txt  test.txt
hybrid_area/: .gitignore  .shell.sh.swp  core  hybrid  hybrid.cpp  hybrid_new.cpp  shell.sh  test  test.txt  test1  test2  test3
include/: DNA_encoder.h  global.h  rabin.h  rs.hpp  tool.h  transform_selection.h  transformation.h  var_transform.h  variable_length.h
payload_files/: payload1.txt
src/: DNA_encoder.cpp  global.cpp  rabin.cpp  test.cpp  tool.cpp  transform_selection.cpp  var_transform.cpp  variable_length.cpp
tools/: var_len_combine.cpp
